--- a/assets/style.scss
+++ b/assets/style.scss
@@ -69,6 +69,15 @@ header {
 	padding: 10px;
 	color: $color_1;
     backdrop-filter: blur(3px);
+
+    @media all and (max-width:990px)
+    {
+        backdrop-filter: none;
+    }
+    @media all and (max-height:500px)
+    {
+        backdrop-filter: none;
+    }
 	.wrapper {
 		width: 90%;
 		margin: 0 auto;
@@ -96,11 +105,22 @@ header {
 			align-items: center;
             width:100%;
         }
+        @media all and (max-height:500px)
+        {
+            display: flex;
+			justify-content: flex-end;
+			align-items: center;
+            width:100%;
+        }
 		ul {
 			display: flex;
 			list-style: none;
 
             @media all and (max-width:990px)
+            {
+                display: none;
+            }
+            @media all and (max-height:500px)
             {
                 display: none;
             }
@@ -154,6 +174,10 @@ header {
     {
         display: none;
     }
+    @media all and (max-height:500px)
+    {
+        display: none;
+    }
 	#name {
 		align-self: flex-start;
         font-weight: 400;
@@ -176,6 +200,10 @@ header {
     z-index:100;
 
     @media all and (max-width:990px)
+    {
+        display: block;
+    }
+    @media all and (max-height:500px)
     {
         display: block;
     }
@@ -635,16 +663,16 @@ header.menuOpened {
                         width:60%;
                         height:650px;
                         border-radius: 45px;
-                        transform: translateY(15%);
+                        margin-top: 100px;
                         margin-bottom: 40px;
                         @media all and (max-width:1400px)
                         {
-                            transform: translateY(55%);
+                            margin-top: 250px;
                             height:500px;
                         }
                         @media all and (max-width:600px)
                         {
-                            transform: translateY(0%);
+                            margin-top: 0px;
                             height:400px;
                             width:80%;
                         }
@@ -1021,7 +1049,7 @@ header.menuOpened {
 
         .cadre{
             width:100%;
-            min-height:110vh;
+            min-height:120vh;
             border-radius: 45px;
             background: #0E2352;
             box-shadow: -5px -4px 15px 0px #0C1933 inset, 8px 8px 15px 0px rgba(0, 0, 0, 0.25); 
@@ -1030,13 +1058,89 @@ header.menuOpened {
             justify-content: center;
 
             /* Nécéssaire pour que le bouton send ne passe pas dans au dessus du footer */
+            @media all and (max-height:850px)
+            {
+                min-height:130vh;
+            }
             @media all and (max-height:800px)
             {
-                min-height:150vh;
+                min-height:140vh;
+            }
+            @media all and (max-height:750px)
+            {
+                min-height:155vh;
             }
             @media all and (max-height:700px)
             {
-                min-height:150vh;
+                min-height:165vh;
+            }
+            @media all and (max-height:650px)
+            {
+                min-height:175vh;
+            }
+            @media all and (max-height:600px)
+            {
+                min-height:185vh;
+            }
+            @media all and (max-height:550px)
+            {
+                min-height:200vh;
+            }
+            @media all and (max-height:515px)
+            {
+                min-height:210vh;
+            }
+            @media all and (max-height:500px)
+            {
+                min-height:215vh;
+            }
+            @media all and (max-height:475px)
+            {
+                min-height:230vh;
+            }
+            @media all and (max-height:450px)
+            {
+                min-height:240vh;
+            }
+            @media all and (max-height:430px)
+            {
+                min-height:250vh;
+            }
+            @media all and (max-height:410px)
+            {
+                min-height:260vh;
+            }
+            @media all and (max-height:395px)
+            {
+                min-height:270vh;
+            }
+            @media all and (max-height:380px)
+            {
+                min-height:290vh;
+            }
+            @media all and (max-height:355px)
+            {
+                min-height:310vh;
+            }
+            @media all and (max-height:355px)
+            {
+                min-height:325vh;
+            }
+            @media all and (max-height:315px)
+            {
+                min-height:350vh;
+            }
+            @media all and (max-height:300px)
+            {
+                min-height:370vh;
+            }
+            @media all and (max-height:280px)
+            {
+                min-height:390vh;
+            }
+            @media all and (max-height:265px)
+            {
+                min-height:410vh;
             }
         }
         /* Form */
@@ -1220,33 +1324,20 @@ header.menuOpened {
         }
     }
 
-    img{
+    .fond{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+    
+
+    .rectangle{
+        height:25%;
         width:100%;
         position: absolute;
         bottom:0;
         left:0;
         object-fit: cover;
-    }
-
-    .fond{
-        @media all and (max-width:1000px)
-        {
-            bottom: 5%;
-        }
-        @media all and (max-width:650px)
-        {
-            bottom: 7%;
-        }
-        @media all and (max-width:500px)
-        {
-            bottom: 10%
-        }
-    }
-
-    .rectangle{
-        height:22%;
-        width:100%;
-
         @media all and (max-width:1300px)
         {
             height:19%;
