--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1336,6 +1336,9 @@ footer{
                     {
                         margin:10px 0;
                     }
+                    a{
+                        color: white;
+                    }
                 }
             }
         }
