--- a/assets/style.scss
+++ b/assets/style.scss
@@ -188,6 +188,7 @@ header {
 	margin-bottom: 8px;
 }
 .menu {
+    background-color: rgb(17, 41, 96,40%);
 	width: 100%;
 	min-height: 100vh;
 	position: fixed;
@@ -196,7 +197,6 @@ header {
 	transform: translateX(100%);
 	z-index: 99;
 	transition: all 0.4s ease-in-out;
-
     a{
         display: none;
     }
@@ -207,7 +207,7 @@ header {
 	.cache {
 		width: 50%;
 		min-height: 100vh;
-		background-color: rgb(17, 41, 96,40%);
+		
 	}
 	#menu {
 		background-color: #112960;
@@ -990,6 +990,10 @@ header.menuOpened {
     .wrapper{
         width:80%;
         margin:0 auto;
+        @media all and (max-width:600px)
+        {
+            width:95%;
+        }
         h3{
             font-family: $font-family_2;
             letter-spacing: 10px;
@@ -1004,7 +1008,7 @@ header.menuOpened {
         }
         .cadre{
             width:100%;
-            min-height:120vh;
+            min-height:1800px;
             border-radius: 45px;
             background: #0E2352;
             box-shadow: -5px -4px 15px 0px #0C1933 inset, 8px 8px 15px 0px rgba(0, 0, 0, 0.25); 
@@ -1012,90 +1016,151 @@ header.menuOpened {
             align-items: start;
             justify-content: center;
             /* Nécéssaire pour que le bouton send ne passe pas dans au dessus du footer */
-            @media all and (max-height:850px)
+            @media all and (max-width:4000px)
             {
-                min-height:130vh;
+                min-height:1600px;
             }
-            @media all and (max-height:800px)
+            @media all and (max-width:3500px)
             {
-                min-height:140vh;
+                min-height:1450px;
             }
-            @media all and (max-height:750px)
+            @media all and (max-width:3000px)
             {
-                min-height:155vh;
+                min-height:1350px;
             }
-            @media all and (max-height:700px)
+            @media all and (max-width:2500px)
             {
-                min-height:165vh;
+                min-height:1250px;
             }
-            @media all and (max-height:650px)
+            @media all and (max-width:2000px)
             {
-                min-height:175vh;
+                min-height:1100px;
             }
-            @media all and (max-height:600px)
+            @media all and (max-width:1920px)
             {
-                min-height:185vh;
+                min-height:50vh;
+                @media all and (max-height:1250px)
+                {
+                    min-height:80vh;
+                }
+                @media all and (max-height:1200px)
+                {
+                    min-height:90vh;
+                }
+                @media all and (max-height:1150px)
+                {
+                    min-height:100vh;
+                }
+                @media all and (max-height:1100px)
+                {
+                    min-height:100vh;
+                }
+                @media all and (max-height:1050px)
+                {
+                    min-height:105vh;
+                }
+                @media all and (max-height:1000px)
+                {
+                    min-height:105vh;
+                }
+                @media all and (max-height:950px)
+                {
+                    min-height:110vh;
+                }
+                @media all and (max-height:900px)
+                {
+                    min-height:120vh;
+                }
+                @media all and (max-height:850px)
+                {
+                    min-height:130vh;
+                }
+                @media all and (max-height:800px)
+                {
+                    min-height:140vh;
+                }
+                @media all and (max-height:750px)
+                {
+                    min-height:145vh;
+                }
+                @media all and (max-height:725px)
+                {
+                    min-height:150vh;
+                }
+                @media all and (max-height:700px)
+                {
+                    min-height:160vh;
+                }
+                @media all and (max-height:650px)
+                {
+                    min-height:175vh;
+                }
+                @media all and (max-height:600px)
+                {
+                    min-height:185vh;
+                }
+                @media all and (max-height:550px)
+                {
+                    min-height:200vh;
+                }
+                @media all and (max-height:515px)
+                {
+                    min-height:210vh;
+                }
+                @media all and (max-height:500px)
+                {
+                    min-height:215vh;
+                }
+                @media all and (max-height:475px)
+                {
+                    min-height:230vh;
+                }
+                @media all and (max-height:450px)
+                {
+                    min-height:240vh;
+                }
+                @media all and (max-height:430px)
+                {
+                    min-height:250vh;
+                }
+                @media all and (max-height:410px)
+                {
+                    min-height:260vh;
+                }
+                @media all and (max-height:395px)
+                {
+                    min-height:270vh;
+                }
+                @media all and (max-height:380px)
+                {
+                    min-height:290vh;
+                }
+                @media all and (max-height:355px)
+                {
+                    min-height:310vh;
+                }
+                @media all and (max-height:355px)
+                {
+                    min-height:320vh;
+                }
+                @media all and (max-height:315px)
+                {
+                    min-height:350vh;
+                }
+                @media all and (max-height:300px)
+                {
+                    min-height:370vh;
+                }
+                @media all and (max-height:280px)
+                {
+                    min-height:390vh;
+                }
+                @media all and (max-height:265px)
+                {
+                    min-height:410vh;
+                }
             }
-            @media all and (max-height:550px)
-            {
-                min-height:200vh;
-            }
-            @media all and (max-height:515px)
-            {
-                min-height:210vh;
-            }
-            @media all and (max-height:500px)
-            {
-                min-height:215vh;
-            }
-            @media all and (max-height:475px)
-            {
-                min-height:230vh;
-            }
-            @media all and (max-height:450px)
-            {
-                min-height:240vh;
-            }
-            @media all and (max-height:430px)
-            {
-                min-height:250vh;
-            }
-            @media all and (max-height:410px)
-            {
-                min-height:260vh;
-            }
-            @media all and (max-height:395px)
-            {
-                min-height:270vh;
-            }
-            @media all and (max-height:380px)
-            {
-                min-height:290vh;
-            }
-            @media all and (max-height:355px)
-            {
-                min-height:310vh;
-            }
-            @media all and (max-height:355px)
-            {
-                min-height:325vh;
-            }
-            @media all and (max-height:315px)
-            {
-                min-height:350vh;
-            }
-            @media all and (max-height:300px)
-            {
-                min-height:370vh;
-            }
-            @media all and (max-height:280px)
-            {
-                min-height:390vh;
-            }
-            @media all and (max-height:265px)
-            {
-                min-height:410vh;
-            }
+            
         }
         /* Form */
         .request{
@@ -1264,6 +1329,21 @@ header.menuOpened {
         position: absolute;
         bottom: 0;
         left: 0;
+        width: 100vw;
+        
+        @media all and (max-width:2500px)
+        {
+            height:900px;
+        }
+        @media all and (max-width:2000px)
+        {
+            height:720px;
+        }
+        @media all and (max-width:1920px)
+        {
+            height:686px;
+            width:1920px;
+        }
     }
     .rectangle{
         height:25%;
