--- a/assets/style.scss
+++ b/assets/style.scss
@@ -630,19 +630,20 @@ header.menuOpened {
                         background-color: rgb(255, 255, 255,30%);
                         box-shadow: -5px -4px 15px 0px rgba(247, 247, 247, 0.50) inset, 8px 8px 15px 0px rgba(0, 0, 0, 0.25); 
                         width:60%;
-                        height:650px;
+                        min-height:650px;
                         border-radius: 45px;
                         margin-top: 100px;
                         margin-bottom: 40px;
+                        padding:20px;
                         @media all and (max-width:1400px)
                         {
                             margin-top: 250px;
-                            height:500px;
+                            min-height:500px;
                         }
                         @media all and (max-width:600px)
                         {
-                            margin-top: 0px;
-                            height:400px;
+                            margin-top: 25px;
+                            min-height:400px;
                             width:80%;
                         }
 
@@ -752,33 +753,6 @@ header.menuOpened {
             justify-content: space-between;
             align-items: center;
 
-            /* Flèche permettant de changer de "page" pour les projets */
-            .arrow{
-                width:100px;
-                height:100px;
-                border-radius: 50%;
-                background: rgba(247, 247, 247, 0.25);
-                box-shadow: -5px -4px 15px 0px rgba(247, 247, 247, 0.50) inset, 8px 8px 15px 0px rgba(0, 0, 0, 0.25); 
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                @media all and (max-width:1168px)
-                {
-                    opacity: 0;
-                }
-
-                &:first-child{
-                    margin-left: 20px;
-                }
-                &:last-child{
-                    margin-right: 20px;
-                }
-
-                svg{
-                    font-size: 2em;
-                }
-            }
             .wrapper{
                 display: flex;
                 justify-content: space-evenly;
@@ -852,7 +826,7 @@ header.menuOpened {
                         img{
                             width:100%;
                             height:260px;
-                            object-fit: cover;
+                            object-fit: contain;
                         }
                     }
                 }    
@@ -975,7 +949,7 @@ header.menuOpened {
                     img{
                         width:100%;
                         height:260px;
-                        object-fit: cover;
+                        object-fit: contain;
                     }
                 }
             }    
